# phish-detect

./: .gitignore  .replit  DEPLOYMENT.md  README.md  __init__.py  advanced_parser.py  app.py  database_service.py  email_parser.py  phishing_detector.py  pyproject.toml  requirements.txt  setup.py  test_data_integrity.py  test_database_fixes.py  test_database_service.py
attached_assets/: Goal_1758026068794.docx  ICT703 - Task 2 - Sample setup file-1_1758026068796.xlsx  ICT703 - Test email message 1_1758026068799.eml
phish_detect/: __init__.py
