[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phish-detect"
version = "1.0.0"
description = "Phishing Email Detection Tool"
authors = [{name = "Stanley Gathekia", email = "njorogestan12@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4>=4.13.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "streamlit>=1.49.1",
]

[project.urls]
Homepage = "https://github.com/mufasa78/phish-detect"
Repository = "https://github.com/mufasa78/phish-detect"

[tool.setuptools]
py-modules = ["app", "database_service", "email_parser", "phishing_detector", "advanced_parser"]

[tool.setuptools.package-dir]
"" = "."
