[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phish-detect"
version = "1.0.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "openpyxl>=3.1.5", 
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "streamlit>=1.49.1",
]
